--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,14 @@
   "presets": [
     "stage-2",
     ["env", { "modules": false }]
+  ],
+  "plugins": [
+    [
+      "component",
+      {
+        "libraryName": "element-ui",
+        "styleLibraryName": "theme-chalk"
+      }
+    ]
   ]
 }
