--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     ]
   },
   "name": "avi-player-ui",
-  "version": "0.0.0",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www.js",
+    "start": "node server.exe",
     "dev_start": "nodemon ./bin/www.js",
     "install_service": "node ./bin/install.js",
     "uninstall_service": "node ./bin/uninstall.js",
@@ -40,6 +40,7 @@
     "moment": "^2.22.2",
     "morgan": "~1.9.0",
     "node-cmd": "^3.0.0",
+    "node-windows": "^0.1.14",
     "node-xlsx": "^0.12.1",
     "sqlite3": "^4.0.2",
     "vue": "^2.3.4",
@@ -55,6 +56,11 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
+    "grunt": "^1.0.3",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^3.4.0",
+    "grunt-css": "^0.5.4",
+    "grunt-webpack": "^3.1.2",
     "html-webpack-plugin": "^2.29.0",
     "postcss-loader": "^2.0.6",
     "rimraf": "^2.6.1",
@@ -63,7 +69,7 @@
     "vue-loader": "^13.0.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.4",
-    "webpack": "^3.0.0",
+    "webpack": "^3.12.0",
     "webpack-dev-server": "^2.5.0"
   },
   "license": "MIT"
